# esp32-camera-poc

./: Cargo.toml  README.md  build.rs  sdkconfig.defaults  sdkconfig.release
.cargo/: config.toml
pio-proj/: CMakeLists.txt
src/: esp_camera.rs  main.rs
